--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
-    "razorpay": "^2.9.2"
+    "path": "^0.12.7",
+    "razorpay": "^2.9.2",
+    "uninstall": "^0.0.0"
   }
 }
